fix spacing inside header; tweak spacing inside footer

--- a/cel/castedo.com/style/frame.css
+++ b/cel/castedo.com/style/frame.css
@@ -44,6 +44,7 @@ body {
 }
 .header{float:left; width:100%; height:75px; border-bottom:10px solid #f63; position:relative; z-index:1; background:#fff;}
 .wrapper{width:100%; background:#fff;}
+.header h1 { margin-left: 48px }
 h1 .logo {
  color: #996600;
  font:44px/75px sans-serif;
@@ -186,7 +187,7 @@ h3{font:italic 18px Georgia, "Times New Roman", Times, serif; color:#ff6633;  fl
 
 .footer{background:#4a4a4a; width:100%;  float:left; height:60px}
 .footerLink{dispaly:block; background:#bdbdbd; height:40px;}
-.footerLink .wrapper{background:none; width:860px; margin:0 auto;}
+.footerLink .wrapper{background:none; width:800px; margin:0 auto;}
 .footerLink a{color:#c73200; font:16px/38px Georgia, "Times New Roman", Times, serif; margin:0 2px;}
 .footerLink a.flogo {
  background:url(images/cel_logo_small.png) left center no-repeat;
